# BOLDswimsuite

./: README.md  pyproject.toml
docs/: BOLDswimsuite.rst  conf.py  docstring_definitions.txt  index.rst  modules.rst
examples/: 2D-ANA-DD_script.py  2D-ANA-MC-G-MW_script.py  2D-ANA-MC-G_script.py  2D-ANA-MC_script.py  3D-ANA-MC-G_script.py  3D-ANA-MC_script.py  3D-FFT-MC_script.py  saveload_ContinuousVoxel2D.py  saveload_ContinuousVoxel3D.py  saveload_DiscreteVoxel2D.py  saveload_DiscreteVoxel3D.py
examples/axonfiles/: positions_1000.csv  radii_1000.csv
lessons/: Lesson0_JupyterNotebooks.ipynb  Lesson1_BOLDvessel.ipynb  Lesson2_BOLDgeometry.ipynb  Lesson3_BOLDspins.ipynb  Lesson4_BOLDsequence.ipynb  Lesson5_BOLDdeterministic.ipynb  Lesson6_AdvancedExamples.ipynb
