[tool.poetry]
name = "boldswimsuite"
version = "0.1.0"
description = ""
authors = ["Jacob Chausse <jchausse@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.19"
numba = "^0.60.0"
scipy = "^1.14.1"
tqdm = "^4.67.0"
pathos = "^0.3.3"

ipykernel = { version = "^6.22.0", optional = true }
jupyter = { version = "^1.0.0", optional = true }
mayavi = { version = "^4.8.1", optional = true }
matplotlib = { version = "^3.6.0", optional = true }
vtk = { version = "9.3", optional = true }

PyQt5 = { version = "^5.15.11", optional = true }
configobj = { version="^5.0.9", optional = true}

[tool.poetry.extras]
lessons = ["ipykernel", "jupyter"]
display = ["vtk", "mayavi", "matplolib", "PyQt5", "configobj"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
